[package]
name = "mkv_cruncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.1.0"
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4.17"
log4rs = "1.1.1"
matroska = "0.18.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
subprocess = "0.2.9"
walkdir = "2.3.2"
