[package]
name = "mkv_cruncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.1.0"
serde_json = "1.0.91"
walkdir = "2.3.2"

log = "0.4.17"
flexi_logger = "0.24.2"

clap = { version = "3.2.23", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
indicatif = "0.17.3"
